--- a/css/main.css
+++ b/css/main.css
@@ -530,7 +530,10 @@ margin-right: 15px;
     display: none;
 }
 @media only screen and (max-width: 800px) {
-    .classes .con {
+nav {
+        width: 100%;
+    }    
+.classes .con {
         width: 90%;
         position: absolute;
         left: 5%;
